# AI_CoverLetter_Generator

./: README.markdown
backend/: main.py  models.py  pyproject.toml  utils.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.jsx  AuthenticationPage.jsx  index.css  main.jsx
frontend/src/components/: CoverLetterOutput.jsx  JobDescriptionInput.jsx  ResumeUploader.jsx
git_backups/frontend.git/: config  index
git_backups/frontend.git/logs/: HEAD
git_backups/frontend.git/logs/refs/remotes/origin/: main
git_backups/frontend.git/refs/heads/: main
